--- a/home_styles.css
+++ b/home_styles.css
@@ -60,6 +60,9 @@
     font-size:1.3rem;
 }
 
+.social-media-buttons i{
+    cursor:pointer;
+}
 .reviews-header{
     text-align:center;
     margin:auto;
